src/objects/Sales_Manager_Log1__c.object
<CustomObject>
    <fields>
        <fullName>Average_Calls_Per_Hour__c</fullName>
        <label>Average Calls Per Hour</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Agent_Conversion__c</fullName>
        <label>New Agent Conversion</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Calls_Made__c</fullName>
        <label>Total Calls Made</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Manager Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Manager Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Manager Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>